syntax = "proto3";

package history_service;
option go_package = "cs3219-project-ay2223s1-g33/proto";

import "types.proto";

message GetAttemptHistoryRequest {
  int32 limit = 1;
  int32 offset = 2;

  uint64 question_id = 3;
}

message GetAttemptHistoryResponse {
  repeated common.HistoryAttempt attempts = 1;
  string error_message = 2;
}

service HistoryService {
  rpc GetAttemptHistory(GetAttemptHistoryRequest) returns (GetAttemptHistoryResponse);
}
